Fix paragraph spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,6 +321,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 300;
 }
 
+.bio {
+    margin: 0 15px 0 -15px;
+}
+
 /* Separator About - Parallax Section */
 .sep {
 	background-attachment: fixed;
@@ -448,10 +452,6 @@ h1, h2, h3, h4, h5, h6 {
 .row h1 {
   letter-spacing: 3px;
   font-weight: 500;
-}
-
-.row p {
-  text-align: left;
 }
 
 .photo-wrapper {
